--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -56,7 +56,7 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "@inertiajs": "git@github.com:KrebitAB/inertia.git",
+    "@inertiajs/core": "file:../core",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0"
   }
