--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inertiajs/vue3",
+  "name": "@krebit/inertia-vue3",
   "version": "1.0.11",
   "license": "MIT",
   "description": "The Vue 3 adapter for Inertia.js",
@@ -56,7 +56,6 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "@inertiajs/core": "file:../core",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0"
   }
