--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -28,7 +28,7 @@
     "svelte": "^3.20.0 || ^4.0.0"
   },
   "dependencies": {
-    "@inertiajs/core": "1.0.11",
+    "@krebitab/inertia-core": "1.0.11",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0"
   }
